# cabinet-manipulation-eef

./: .gitignore  .gitmodules  README.md  commands.md  cpu-environment.yaml  environment.yaml  makefile  setup.cfg
.github/workflows/: mypy.yaml  pytest.yaml
ROS/: dockerfile  ure-fzi-start-script.sh
ROS/scripts/: ure-fzi-start-script.sh
ROS/src/ure_cartesian_controllers/: package.xml  setup.cfg  setup.py
ROS/src/ure_cartesian_controllers/config/: cartesian_controllers.yaml
ROS/src/ure_cartesian_controllers/launch/: ure_fzi_controllers.launch.py
ROS/src/ure_cartesian_controllers/urdf/: ur.urdf.xacro  ur_macro.xacro
ROS/src/ure_cartesian_controllers/ure_cartesian_controllers/: tf2_to_topic_publisher.py  tf2_to_transform_publisher.py
cabinet-robot/: joint_estimation_exploration.ipynb  setup.py
cabinet-robot/cabinet_robot/: camera_calibration_utils.py  joint_estimation.py  manual_point_cloud.py  open_cabinet.py  retreat.py  robot.py  ros_test_webbridge.py  visualisation.py
cabinet-robot/scripts/: marker.pickle  static_camera_calibration.py
cabinet-robot/test/: test_dummy.py
