<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ure_cartesian_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thomas17.lips@gmail.com">tlips</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
